--- a/js/ex002.html
+++ b/js/ex002.html
@@ -3,20 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dom</title>
+    <title>variaveis</title>
     <style>
-        body {
-         background-color: rgb(60, 0, 128);
+        body{
+            h1{
+                text-align: center;
+                font-family: Arial, Helvetica, sans-serif;
+            }
         }
     </style>
 </head>
 <body>
-    <h1>testando o DOM</h1>
-    <p> isso <strong> isso!! </strong></p>
-    <div id = "msg"></div>
+    <h1>variaveis e tipos primitivos</h1>
     <script>
-       
-    </script>
         
+
+    </script>
 </body>
 </html>
