--- a/js/ex002.html
+++ b/js/ex002.html
@@ -16,7 +16,8 @@
 <body>
     <h1>variaveis e tipos primitivos</h1>
     <script>
-        
+        var nome = window.prompt('qual o seu nome?')
+        window.alert('prazer em conhecer voce ' + nome)
 
     </script>
 </body>
