--- a/para praticar/treinando.html
+++ b/para praticar/treinando.html
@@ -1,4 +1,4 @@
-|<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -6,12 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>teste de js</h1>
-
 <script>
-    var n1 = 2 
-    var n2 = '2'
-    window.document.write(n1===n2)
+   
 </script>
 </body>
 </html>
