--- a/js/ex016.html
+++ b/js/ex016.html
@@ -15,7 +15,7 @@
     function clicar(){
         var txt = window.document.getElementById('pais1')
         var rest = window.document.getElementById('res')
-        if(txt === 'brasil'){
+        if(txt == 'brasil'){
             rest.innerHTML += ('brasileiro')
         }else{
             rest.innerHTML += ('estrangeiro')
