--- a/contador/verificador.html
+++ b/contador/verificador.html
@@ -8,25 +8,18 @@
 </head>
 <body>
     <header>
-        <h1>Verificando a Idade</h1>
+        <h1>começando</h1>
     </header>
     <section>
-        <div>
-            <p>
-               <input type="number" name="txtano" id="txtano">
-            </p>
-            <p>
-                sexo:
-                <input type="radio" name="redsex" id="masc ">
-                <label for="masc"> masculino</label>
-                <input type="radio" name="redsex" id="fem">
-                 <label for="fem">feminino</label>
-            </p>
-            <p>
-                <input type="button" value="verificar" onclick="verificar()">
-            </p>
+        <div id="dados">
+           <p>n1: <input type="number" name="nn" id="txt1"></p>
+           <p>n2: <input type="number" name="nn2" id="txt2"></p>
+           <p>n3: <input type="number" name="nn3" id="txt3"></p>
+           <p><input type="button" value="enviar" onclick="clicar()"></p>
+
         </div>
         <div id="res">
+            preparando a contagem...
         </div>
     </section>
     <footer>&copy; curso em video</footer>
