--- a/exercicios/tabuada/tabuda.html
+++ b/exercicios/tabuada/tabuda.html
@@ -6,17 +6,18 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body onload="funcionar()">
+<body>
     <header>
         <h1>titulo</h1>
     </header>
     <article>
         <div>
-            <p>Numero: <input type="number" name="num" id="txn">
-            <input type="button" value="gerar tabuada" onclick="tabuada()"></p>
+        <p>  Numero: <input type="number" name="num" id="txtn">
+            <input type="button" value="gerar tabuada" onclick="tabuada()">
+        </p>
         </div>
         <div>
-        <select name="tabuada" id="seltab">
+        <select name="tabuada" id="seltab" size="10">
             <option> resultado tabuda</option>
         </select>
         </div>
