--- a/jss.html
+++ b/jss.html
@@ -6,29 +6,21 @@
     <title>Document</title>
 </head>
 <body>
-<p>usando OR e AND</p>
+<p> while, do while, for</p>
 
 <input type="button" value="enviar" onclick="clicar()">
 
 <div id="res"></div>
 
-<script> 
-function clicar(){
- let res = window.document.getElementById('res')
- let num1 = 3 
- let num2 = 5
- let num3 = 6 
- let num4 = 7 
-
-let r = (num1 > num2 ) || (num4 < num2)
-res.innerHTML = r 
-
-if(r){
-    res.innerHTML = ' true '
-}else{
-    res.innerHTML = ' false '
-}
-}
+<script>
+    function clicar(){
+    let res = window.document.getElementById('res')
+    var c = 1 
+    while (c < 10){
+        res.innerHTML ='oi'
+        c++
+    }
+    }
 </script>
 </body>
 </html>
