--- a/javascript-lado-cliente/functions-html/function-html011.html
+++ b/javascript-lado-cliente/functions-html/function-html011.html
@@ -39,17 +39,22 @@
     </style>
 </head>
 <body>
-    <h1>function com return 01</h1>
+    <h1>function com return 02</h1>
 
 <div id="conteiner">
-    <div id="res"></div>
+    <div id="res">
+        
+    </div>
 </div>
 <script>
     function verdorfal(){
-        let res = window.document.getElementById('res')
-        return ' my name is' + ' Denner Nemeth'
+     let res = window.document.getElementById('res')
+     let n1 = 10 
+     let n2 = 10 
+     let s = n1 + n2 
+        return s
 
-    } res.innerHTML= verdorfal()
+    } res.innerHTML = verdorfal()
 </script>
 </body>
 </html>
