--- a/jsss.html
+++ b/jsss.html
@@ -11,13 +11,14 @@
 </head>
 <body>
 <script>
-let el = document.getElementsByTagName('div')
+let el = document.getElementsByTagName("div")
 
-el=[...el]
+el= [...el]
 
 el.map((e,i)=>{
-    console.log(e)
-}
+    console.log(e.innerHTML='oi')
+    
+})
 </script>
 </body>
 </html>
