--- a/jsss.html
+++ b/jsss.html
@@ -3,22 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <div id="i">e</div>
-    <div id="xi">b</div>
-    <div id="di">d</div>
-    <div id="d">c</div>
+    <title></title>
 </head>
 <body>
-<script>
-let el = document.getElementsByTagName("div")
+<div id="c1">h</div>
+<div id="c2">t</div>
+<div id="c3">m</div>
+<div id="c4">l</div>
+<div id="c5">cs</div>
+<div id="c6">s</div>
 
-el= [...el]
-
-el.map((e,i)=>{
-    console.log(e.innerHTML='oi')
-    
-})
-</script>
+<script src="jsss.js"></script>
 </body>
 </html>
