--- a/javascript-lado-cliente/functions-html/function-html017.html
+++ b/javascript-lado-cliente/functions-html/function-html017.html
@@ -23,8 +23,12 @@
    
    let numeros=[dc1,dc2,dc3,dc4,dc5,dc6]
 
-    for(n of numeros)
-    n.innerHTML ='MODIFQUEI'
+   // for(n of numeros)
+    //n.innerHTML ='MODIFQUEI'
+
+ numeros.map((e)=>{
+    window.document.write =e
+ })
 
 
 </script>
