--- a/jsss.html
+++ b/jsss.html
@@ -3,16 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Document</title>
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 </head>
 <body>
-<div id="c1">h</div>
-<div id="c2">t</div>
-<div id="c3">m</div>
-<div id="c4">l</div>
-<div id="c5">cs</div>
-<div id="c6">s</div>
-
-<script src="jsss.js"></script>
+    <p>teste</p>
+    <p> cfb</p>
+    <script>
+        $("p").css("color","#f00")
+    </script>
 </body>
 </html>
