--- a/jsss.html
+++ b/jsss.html
@@ -21,26 +21,9 @@
     </style>
 </head>
 <body>
-    <div class="clicar"> <button>clique aqui para saber seu resultado</button></div>
+   <div class="msg"> <button value="clique"></button></div>
 <script>
 
-const somar01 = [...window.document.getElementsByClassName('clicar')]
-
-somar01.map((el)=>{
-   el.addEventListener('click', function(){
-     let n1 = 40
-     let n2 = 20 
-     let soma = n1 + n2 
-     if(soma > 40 ){
-         alert('deu maior que 40 ')
-    }else{
-    alert('menor false ')
-   }
-
-     
-   })
-})
-   
 </script>
 </body>
 </html>
