--- a/jsss.html
+++ b/jsss.html
@@ -4,91 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        body{
-            font-family: Arial, Helvetica, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f4f4f4;
-            margin: 0;
-        }
-        .container{
-            text-align: center;
-            background-color: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        input[type='text']{
-
-            padding: 10px;
-            font-size: 16px;
-            width: 80%;
-            margin-right: 10px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
-
-        button{
-            padding: 10px 20px;
-            font-size: 16px;
-            color: white;
-            background-color: #007BFF;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-        button:hover{
-            background-color: #0056b3;
-        }
-        ul{
-            list-style-type: none;
-            padding: 0;
-        }
-        li{
-           background-color: #f9f9f9; 
-           margin: 5px 0;
-           padding: 10px;
-           border: 1px solid #ccc;
-           border-radius: 4px;
-           text-align: left;
-        }
-
-    </style>
 </head>
 <body>
-    <div class="container">
-         <h1> lista de tarefas </h1> 
-        <input type="text" id="taxtInput" placeholder="digite um nova tarefa ... ">
-        <button id="addTaskButton"> Adicionar tarefa</button>
-        <ul id="taskList"></ul>
-    </div>
-
+    <div id="pai">PAI</div>
 <script>
-    document.addEventListener('DOMContentloaded',  ()=>{
-      const taskInput = document.getElementById('taskInput');
-      const addTaskButton = document.getElementById('addTaskButton');
-      const taskList = document.getElementById('taskList');
+    let pai = window.document.getElementById('pai')
+  
+    const numeros=[1,2,3,4,56,7,8,9]
 
-      addTaskButton.addEventListener('click', ()=>{
-        const taskText = taskInput.value.trim();
-      })
+    numeros.map((el,chave)=>{
 
-      if(taskList !== ''){
-        const lisItem = document.createElement('li')
-        listItem.textContent = taskText;
-
-        lisItem.addEventListener('click', ()=>{
-            lisItem.classList.toggle('completed');
-        });
-
-        taskList.appendChild(lisItem);
-        taskInput.value= '';
-        taskInput.focus();
-      }
-    });
+    const filho = document.createElement('div')
+    pai.appendChild(filho)
+    filho.setAttribute('id', 'c2')
+    filho.setAttribute('class', 'c3')
+    filho.innerHTML=el 
+    })
+  
 </script>
 </body>
 </html>
