--- a/testes.html
+++ b/testes.html
@@ -14,13 +14,24 @@
 </head>
 <body>
     <main class="pai">
-        
-    </main>
-<button class="btnCursoSelecionado">Adicionar cor</button>
-<script>
-const pai = window.document.getElementsByClassName('pai')
-const cores = ['cor1','cor2','cor3','cor4']
+        <div class="f1"> f1
+            <div class="f2"> f2 
+                <div class="f3">f3</div>
+            </div>
 
+        </div>
+    </main>
+
+<script>
+let numeros = [1,2,3,4,5,6,7,7,7,4,2]
+
+numeros.map((el,chave)=>{
+let elements = document.createElement('div')
+elements.setAttribute('class', 'f4')
+elements.setAttribute('class','f5')
+
+})
+elements=elements[0]
 </script>
 </body>
 </html>
