--- a/testes.html
+++ b/testes.html
@@ -4,34 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        *{
-            margin: 0px;
-            padding: 0px;
-        }
-
-    </style>
 </head>
 <body>
-    <main class="pai">
-        <div class="f1"> f1
-            <div class="f2"> f2 
-                <div class="f3">f3</div>
-            </div>
-
-        </div>
-    </main>
+    <div class="pt1">OUS1</div>
+    <div id="pt2">OUS2</div>
+    <div class="pt3">OUS3</div>
+    <button class="s1">clique</button>
 
 <script>
-let numeros = [1,2,3,4,5,6,7,7,7,4,2]
+const element = document.getElementById('pt2')
+let btn = [...window.document.getElementsByClassName('s1')]
 
-numeros.map((el,chave)=>{
-let elements = document.createElement('div')
-elements.setAttribute('class', 'f4')
-elements.setAttribute('class','f5')
-
+btn.map((el)=>{
+    el.addEventListener('click', function () {
+        element.remove();
+      })
 })
-elements=elements[0]
+
 </script>
 </body>
 </html>
