--- a/testes.html
+++ b/testes.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
+    <p id="conteiner">0</p>
+    <button class="incremento01">aumentar</button>
+    <button class="decremento02">diminuir</button>
+<script>
+
+
     
+</script>
 </body>
 </html>
