--- a/javascript-lado-cliente/arrays-html/array-13.html
+++ b/javascript-lado-cliente/arrays-html/array-13.html
@@ -8,7 +8,8 @@
 <body>
 
 <h2></h2>
-<script>
+<script>   
+// esse vai mostrar somente bollean se todos os elementos dentro de um array for oque voce indica na sua logica por exemplo, se todos forem maiores que 5 ele vai retornar true, caso contrario se tiver um numero que seja menor ele vai se tornar false.
     let num = [8,10,54,23,11,12]
     let novo=num.every((el)=>{
         return el > 5
