--- a/codigos-projetos-copiadosParaTreinar/index01.html
+++ b/codigos-projetos-copiadosParaTreinar/index01.html
@@ -6,6 +6,7 @@
   <title>Document</title>
 </head>
 <body>
+    <h3>tabuada</h3>
 tabuada do numero: <input type="number"  id="num">
 <button onclick="tabuada()">clicar</button>
 <div class="resposta">res</div>
@@ -17,14 +18,7 @@ var tabuada = ''
 
 for(let count=1; count <=10; count++)
  tabuada += num+' x '+ count+' = ' + num*count+ ' <br/>';
-
  resposta.innerHTML = tabuada
-
-
-
-
-
-
   }
 
 </script>
