--- a/indexTest.html
+++ b/indexTest.html
@@ -6,6 +6,23 @@
   <title>Document</title>
 </head>
 <body>
-  
+
+<script>
+
+let numbers = [1,10,9]
+
+let dobro= numbers.map(function(num){
+   
+  return num * 2
+
+})
+
+console.log(numbers)
+console.log(dobro)
+
+
+
+
+  </script>
 </body>
 </html>
