--- a/indexTest.html
+++ b/indexTest.html
@@ -6,10 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <script>
+    <div id="clas"></div>
 
+<script>
+let m = window.document.querySelector('#clas')
 
-    </script>
+let nuns = [10,43.09,12.11,-65.54,11,7]
+
+console.log(Math.ceil(nuns[2]))
+</script>
 </body>
 </html>
