--- a/indexTest.html
+++ b/indexTest.html
@@ -6,18 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="clock"></div>
-
     <script>
-let clock = window.document.querySelector('#clock')
+let corers = [1,2,3,4,5,6,7,8,9,10]
+
+let arr = Math.floor(Math.random()* corers.length)
 
 
-setInterval(function () {
-    let data = new Date()
-    clock.innerHTML= data.toLocaleTimeString()
-  })
 
-
+console.log(arr)
     </script>
 </body>
 </html>
