--- a/indexTest.html
+++ b/indexTest.html
@@ -6,14 +6,43 @@
     <title>Document</title>
 </head>
 <body>
-    <script>
-let corers = [1,2,3,4,5,6,7,8,9,10]
+<script>
 
-let arr = Math.floor(Math.random()* corers.length)
+class n {
+    constructor(pnome,ptipo){
+        this.nome1 = pnome
+        if(ptipo == 1){
+             this.tipo = 'fraco'
+        }else if (ptipo == 2){
+             this.tipo ='forte'
+        }else if (ptipo == 3){
+             this.tipo = 'razuavel'
+        }
+
+    }
+    getNome(){
+        return this.nome1
+    }
+    getTipo(){
+        return this.tipo
+    }
+    getNome(){
+        return this.nome1
+    }
+    getTipo(){
+        return this.tipo
+    }
+   
+   
+}
 
 
+let c1 = new n ('canetabic', 2)
+let c2 = new n ('vermelha', 3)
 
-console.log(arr)
-    </script>
+console.log(c1.getNome())
+console.log(c2.getTipo())
+
+</script>
 </body>
 </html>
