--- a/javascript-lado-cliente/objetos-html/objt-08.html
+++ b/javascript-lado-cliente/objetos-html/objt-08.html
@@ -3,17 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
     <title>Document</title>
 </head>
-
-<button class="btn">clique</button>
-
 <body>
-    <script>
+<script>
+
+class m {
+    constructor(npom){
+        this.nome=npom
+    }
+}
+let c1 = new m('soma')
+let c2 = new m ('numeros')
 
 
-   
-    </script>
+console.log(c1.nome)
+console.log(c2.nome)
+
+</script>
 </body>
 </html>
