--- a/javascript-lado-cliente/objetos-html/objt-17.html
+++ b/javascript-lado-cliente/objetos-html/objt-17.html
@@ -3,21 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>literais 02</title>
+    <title>Document</title>
 </head>
 <body>
-    <script>
-const num ={
-  numero:10
+<script>
+
+const nome  = {
+    colec:[2,3,4,5,6,7,78,89,9,1]
 }
+console.log(nome.colec[3])
 
-let p1 = num
-let p2 = num
-
-console.log(num.numero)
-
-console.log(p1.numero)
-
-    </script>
+</script>
 </body>
 </html>
