--- a/javascript-lado-cliente/objetos-html/objt-16.html
+++ b/javascript-lado-cliente/objetos-html/objt-16.html
@@ -6,19 +6,21 @@
     <title>Document</title>
 </head>
 <body>
-    <script>
-class calc {
-    constructor(n1,n2){
-        this.num=n1
-        this.num1=n2
-    }
+    
+<script>
+  
+const numero = {
+    numeros:120
 }
 
-let c1 = new calc(10)
-let c2 = new calc(20,20)
+getNome:function up() {
+    return this.num
+  }
 
-console.log(c1.num)
-console.log(c2.num1)
-    </script>
+  const p1 = numero
+
+  console.log(numero.numeros)
+ 
+</script>
 </body>
 </html>
