--- a/javascript-lado-cliente/objetos-html/objt-18.html
+++ b/javascript-lado-cliente/objetos-html/objt-18.html
@@ -3,21 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>literais 02</title>
+    <title>Document</title>
 </head>
 <body>
-    <script>
-const num ={
-  numero:10
+    
+<script>
+    const res = {
+        arr:[1,2,3,4,5,6,7,8,9]
+    }
+
+getNome:function el (){
+ return this.arra
 }
-
-let p1 = num
-let p2 = num
-
-console.log(num.numero)
-
-console.log(p1.numero)
-
-    </script>
+</script>
 </body>
 </html>
