--- a/indexTest.html
+++ b/indexTest.html
@@ -6,6 +6,29 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script>
+        class car{
+            constructor(nome,portas){
+                this.nome=nome
+                this.portas=portas
+                this.ligado=false
+                this.vel=0
+                this.cor=undefined
+            }
+        }
+        velocidade=function(){
+            this.ligado=true
+        }
+        desligar=function(){
+            this.ligado=false
+        }
+        setCor = function(){
+            this.cor=cor
+        }
+
+
+
+        
+    </script>
 </body>
 </html>
