--- a/indexest.html
+++ b/indexest.html
@@ -7,5 +7,21 @@
 </head>
 <body>
     
+    <script>
+        let nom ={
+            nome:'denner',
+            sobrenome:'nemeth',
+            idade:{
+                idade:10
+            }
+        }
+
+        let s_json=JSON.stringify(nom)
+        let o_json=JSON.parse(s_json)
+
+        console.log(nom)
+        console.log(s_json)
+        console.log(o_json)
+    </script>
 </body>
 </html>
