--- a/javascript-lado-cliente/objetos-html/objt-27.html
+++ b/javascript-lado-cliente/objetos-html/objt-27.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <script>
 class npc{
   static alerta=false
   constructor(energia){
@@ -9,17 +18,15 @@ class npc{
     }
 }
 
-
 let c1 = new npc(100)
 let c2 = new npc(80)
 let c3 = new npc(30)
 
 npc.alerta=false
 
-
 c1.info()
 c2.info()
 c3.info()
-
-
-
+    </script>
+</body>
+</html>
