--- a/indexTest.html
+++ b/indexTest.html
@@ -8,7 +8,19 @@
 <body>
     <script>
 
+class nav {
+    constructor(energy){
+        this.energy=energy
+    }
+}
 
+let n1 = new nav(100)
+
+nav.prototype.agua=9
+
+console.log(n1)
+console.log(nav)
+console.log(n1.energy)
 
     </script>
 </body>
